<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myHikesPurple">

    <ImageView
        android:id="@+id/icons"
        android:layout_width="73dp"
        android:layout_height="77dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/animal" />

    <TextView
        android:id="@+id/letters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icons"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="n bi"
        android:text="@string/uhuru_park" />

    <TextView
        android:id="@+id/story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="124dp"
        android:text="TextView"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/mLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="154dp"
        android:text="@string/latitude" />

    <TextView
        android:id="@+id/mLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="184dp"
        android:text="@string/longitude" />


</RelativeLayout>