<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="162dp"
        android:layout_height="39dp"
        android:autofillHints="Enter Email"
        android:background="@color/myHikesWhite"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textEmailSubject"
        android:textColor="@color/myHikesBlack"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="162dp"
        android:layout_height="39dp"
        android:autofillHints="Enter Email"
        android:background="@color/myHikesWhite"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailSubject"
        android:textColor="@color/myHikesBlack"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/email_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent" />



    <TextView
        android:id="@+id/name_label"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:layout_marginTop="224dp"
        android:gravity="center"
        android:text="@string/full_name"
        android:textAlignment="center"
        android:textColor="@color/myHikesWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/banner"
        android:layout_width="244dp"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:background="@color/myHikesWhite"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:text="@string/my_hikes"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:layout_marginTop="316dp"
        android:gravity="center"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/myHikesWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="148dp"
        android:layout_height="51dp"
        android:layout_marginTop="420dp"
        android:gravity="center"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/myHikesWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="166dp"
        android:layout_height="38dp"
        android:background="@color/myHikesWhite"
        android:ems="10"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/password_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="192dp"
        android:background="@color/myHikesWhite"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="504dp"
        android:text="@string/sign_up"
        android:textColor="@color/myHikesWhite"
        android:textSize="24sp"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>